Fix incorrect usage of IDs in the physical light on detection
This bug was introduced when fully switching to the APIv2.
Now we use the correct device ID and look up the affected light and group IDs.